--- a/src/package.json
+++ b/src/package.json
@@ -6,8 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.9",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "postcss": "^8.4.47",
+        "postcss-import": "^16.1.0",
+        "tailwindcss": "^3.4.14",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.14.3",
+        "lodash": "^4.17.21"
     }
 }
