--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel-lang/lang": "^15.2",
+        "laravel/fortify": "^1.24",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8"
